RESOLVED FIXED 243210
AX ITM: Fix for accessibility/nested-textareas-value-changed-notifications.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=243210
Summary AX ITM: Fix for accessibility/nested-textareas-value-changed-notifications.ht...
Andres Gonzalez
Reported 2022-07-26 05:54:14 PDT
Currently a timeout.
Attachments
Patch (8.68 KB, patch)
2022-07-26 06:10 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2022-07-26 05:54:23 PDT
Andres Gonzalez
Comment 2 2022-07-26 06:10:19 PDT
chris fleizach
Comment 3 2022-07-26 07:12:31 PDT
Comment on attachment 461221 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=461221&action=review > Source/WebCore/accessibility/AccessibilityObject.cpp:2373 > if (!renderer() || !is<Element>(node())) We don’t need this renderer check here anymore
Andres Gonzalez
Comment 4 2022-07-26 07:48:44 PDT
(In reply to chris fleizach from comment #3) > Comment on attachment 461221 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=461221&action=review > > > Source/WebCore/accessibility/AccessibilityObject.cpp:2373 > > if (!renderer() || !is<Element>(node())) > > We don’t need this renderer check here anymore Down below we do: auto& editor = renderer()->frame().editor(); So early return if !renderer() is appropriate.
Tyler Wilcock
Comment 5 2022-07-26 08:57:41 PDT
(In reply to Andres Gonzalez from comment #4) > (In reply to chris fleizach from comment #3) > > Comment on attachment 461221 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=461221&action=review > > > > > Source/WebCore/accessibility/AccessibilityObject.cpp:2373 > > > if (!renderer() || !is<Element>(node())) > > > > We don’t need this renderer check here anymore > > Down below we do: > > auto& editor = renderer()->frame().editor(); > > So early return if !renderer() is appropriate. This is the RenderObject implementation for frame: inline Frame& RenderObject::frame() const { return *document().frame(); } Is it possible to use the node to do something similar, making this function not require a renderer at all? This could improve our display:contents support. Up to you if you would prefer not to address that now though.
EWS
Comment 6 2022-07-27 05:15:20 PDT
Committed 252863@main (f410828332d2): <https://commits.webkit.org/252863@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461221 [details].
Note You need to log in before you can comment on or make changes to this bug.