AX ITM: Fix for accessibility/nested-textareas-value-changed-notifications.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=243210

Reviewed by Chris Fleizach.

* LayoutTests/accessibility/nested-textareas-value-changed-notifications-expected.txt:
* LayoutTests/accessibility/nested-textareas-value-changed-notifications.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::insertText):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::insertText):
* Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::insertText):

Canonical link: https://commits.webkit.org/252863@main